--- a/hybridpos/src/main/resources/application.yaml
+++ b/hybridpos/src/main/resources/application.yaml
@@ -1,3 +1,15 @@
 spring:
-  application:
-    name: HybridPosSystem
+  datasource:
+    url: jdbc:postgresql://localhost:5432/HybridPOS
+    username: shopAdmin
+    password: shopAdmin123
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    properties:
+      hibernate:
+        format_sql: true
